amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-interface.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-interface.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'name'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-interface.api.graphql#/declares/shape/HasName/property/property/name
  Property: 
  Range: [(14,4)-(14,10)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'name'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-interface.api.graphql#/declares/shape/HasName/property/property/name_1
  Property: 
  Range: [(15,4)-(15,10)]
  Location: 
